--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -337,7 +337,9 @@
                 android:paddingEnd="30dp"
                 android:paddingBottom="14dp"
                 android:text="@string/all_invite"
+                android:textAllCaps="true"
                 android:textColor="@color/white_color"
+                app:fontName="Roboto-Medium.ttf"
                 app:layout_constraintEnd_toStartOf="@+id/followerContainer"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rankContainer" />
@@ -351,7 +353,7 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/profile_analytics_btn_bg"
                 android:drawableStart="@drawable/ic_analytics"
-                android:drawablePadding="-30dp"
+                android:drawablePadding="-16dp"
                 android:elevation="6dp"
                 android:gravity="center"
                 android:paddingStart="30dp"
@@ -359,7 +361,9 @@
                 android:paddingEnd="10dp"
                 android:paddingBottom="12dp"
                 android:text="@string/all_analytics"
+                android:textAllCaps="true"
                 android:textColor="@color/app_red"
+                app:fontName="Roboto-Medium.ttf"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/followerContainer"
                 app:layout_constraintTop_toBottomOf="@+id/rankContainer" />
