--- a/app/src/main/res/layout/article_details_fragment.xml
+++ b/app/src/main/res/layout/article_details_fragment.xml
@@ -572,6 +572,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:paddingStart="@dimen/space_10"
+            android:paddingEnd="@dimen/space_10"
             android:visibility="gone">
             <RelativeLayout
               android:id="@+id/writeCommentConatiner"
