--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -250,10 +250,11 @@
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:layout_below="@+id/divider1"
-      android:drawableLeft="@drawable/ic_share_icon"
+      android:drawableLeft="@drawable/ic_spread_the_word"
       android:drawablePadding="25dp"
       android:drawableTint="#d54058"
       android:gravity="center_vertical"
+      android:textAllCaps="true"
       android:paddingLeft="30dp"
       android:paddingTop="12dp"
       android:paddingRight="16dp"
@@ -263,6 +264,28 @@
       android:textSize="14sp"
       app:fontName="oswald.ttf" />
 
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="@dimen/space_58"
+      android:layout_below="@+id/divider1"
+      android:layout_alignParentRight="true">
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/newTextView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="25dp"
+        android:background="@drawable/new_drawer_bg"
+        android:paddingLeft="@dimen/space_10"
+        android:paddingTop="2dp"
+        android:paddingRight="@dimen/space_10"
+        android:paddingBottom="2dp"
+        android:text="@string/new_label"
+        android:textColor="@color/white_color"
+        android:textSize="12sp"
+        app:fontName="oswald.ttf" />
+    </LinearLayout>
     <View
       android:id="@+id/divider2"
       android:layout_width="match_parent"
