--- a/app/src/main/res/layout/article_moderation_share_activity.xml
+++ b/app/src/main/res/layout/article_moderation_share_activity.xml
@@ -117,36 +117,25 @@
                     android:padding="10dp"
                     android:src="@drawable/ic_share_fb" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/instagramImageView"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="5dp"
-                    android:layout_toRightOf="@+id/facebookImageView"
-                    android:background="@drawable/unfollow_topic_author_bg"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_insta"
-                    android:tint="@color/white_color" />
-
                 <ImageView
                     android:id="@+id/whatsappImageView"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="5dp"
-                    android:layout_toRightOf="@+id/instagramImageView"
+                    android:layout_toEndOf="@+id/facebookImageView"
                     android:background="@drawable/unfollow_topic_author_bg"
                     android:padding="10dp"
                     android:src="@drawable/ic_share_whats_up" />
 
                 <ImageView
-                    android:id="@+id/twitterImageView"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="5dp"
-                    android:layout_toRightOf="@+id/whatsappImageView"
-                    android:background="@drawable/unfollow_topic_author_bg"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_share_twitter" />
+                  android:id="@+id/genericImageView"
+                  android:layout_width="40dp"
+                  android:layout_height="40dp"
+                  android:layout_margin="5dp"
+                  android:layout_toEndOf="@+id/whatsappImageView"
+                  android:background="@drawable/unfollow_topic_author_bg"
+                  android:padding="10dp"
+                  android:src="@drawable/ic_ss_generic" />
 
             </RelativeLayout>
 
