--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -11,6 +11,7 @@
   <color name="app_light_pink">#E997A8</color>
 
   <color name="all_facebook_share">#3B5998</color>
+  <color name="all_fb_msngr_share">#0084FF</color>
   <color name="all_whatsapp_share">#4CAF50</color>
   <color name="all_instagram_share">#C837AB</color>
   <color name="all_generic_share">#38C5A5</color>
