--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -571,6 +571,7 @@
           android:textStyle="bold"
           app:layout_behavior="@string/appbar_scrolling_view_behavior" />
         <androidx.appcompat.widget.AppCompatImageView
+          android:id="@+id/plusAddButton"
           android:layout_width="10dp"
           android:layout_height="10dp"
           android:layout_centerVertical="true"
