--- a/app/src/main/res/layout/challenge_card_in_vlog_listing_layout.xml
+++ b/app/src/main/res/layout/challenge_card_in_vlog_listing_layout.xml
@@ -45,11 +45,18 @@
         android:layout_alignParentBottom="true"
         android:elevation="@dimen/space_10"
         android:gravity="center_vertical">
+        <androidx.appcompat.widget.AppCompatImageView
+          android:id="@+id/whiteWinnerCup"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/space_10"
+          card_view:srcCompat="@drawable/ic_white_winner" />
 
         <com.mycity4kids.widget.CustomFontTextView
           android:id="@+id/challengeTitleTextView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:layout_below="@id/whiteWinnerCup"
           android:layout_marginStart="@dimen/space_10"
           android:ellipsize="end"
           android:gravity="start"
