--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -415,9 +415,9 @@
           android:id="@+id/myCollectionsWidget"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:visibility="gone"
           android:layout_below="@+id/headerCardView"
-          android:background="@color/app_light_grey" />
+          android:background="@color/app_light_grey"
+          android:visibility="gone" />
       </RelativeLayout>
 
       <androidx.appcompat.widget.Toolbar
